# recode-installer

./: Cargo.toml  build.rs
src/: consts.rs  main.rs
src/app/: mod.rs  update.rs  view.rs
src/gui/: colors.rs  done.rs  error.rs  found.rs  mod.rs  path.rs  progress.rs  style.rs  welcome.rs
src/install/: linux.rs  mod.rs  win.rs
src/net/: dl.rs  github.rs  mod.rs
