[package]
name = "gs-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
futures-util = "0.3"
dirs = "6"
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
mslnk = "0.1"
winreg = "0.55"

[build-dependencies]
embed-resource = "3"
